<resources>
    <string name="app_name">BiPOS</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="inventory">Inventory</string>
    <string name="sales">Sales</string>
    <string name="report">Report</string>
    <string name="name">Name</string>
    <string name="unitPrice">Unit Price</string>
    <string name="done">Done</string>
    <string name="total">Total</string>
    <string name="clear">Clear</string>
    <string name="pay_invoice">Pay Invoice</string>
    <string name="pkr">PKR :</string>
    <string name="paymentAmount">Payment Amount</string>
    <string name="nameonCard">Name on card</string>
    <string name="cardNumber">Card number</string>
    <string name="loyalityPoints">Loyality Points</string>
    <string name="worth">Worth</string>
    <string name="otp">OTP</string>
    <string name="loyality">Loyality</string>
    <string name="pay">Pay</string>
    <string name="message">Pamyent of amount :PAMOUNT has been done succesfully</string>
    <string name="ref">Ref: :PREF </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
</resources>
