<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="layout.InventoryFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:width="100dp"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:id="@+id/editTextName" />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:text="@string/unitPrice"
        android:width="100dp"
        android:layout_marginLeft="130dp"
        android:ems="10"
        android:id="@+id/editTextUnitPrice" />
    <Button
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="240dp"
        android:background="@color/btnGreen"
        android:id="@+id/buttonDone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                android:id="@+id/tabLayout"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
